[gd_scene load_steps=2 format=3 uid="uid://njev6cpapg64"]

[ext_resource type="Script" path="res://Entities/Projectiles/Projectile.gd" id="1_jmb3e"]

[node name="Projectile" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_jmb3e")

[node name="Timeout" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timeout" to="." method="_on_timeout_timeout"]
